stripe et mailer

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -94,7 +94,7 @@ body {
   text-decoration: none;
   color: black;
   padding: 5px 0;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid #949599;
 }
 
 .sidebar-nav li a:hover {
