--- a/app/assets/stylesheets/navbar.css.scss
+++ b/app/assets/stylesheets/navbar.css.scss
@@ -50,7 +50,7 @@ $profile-border-width: 2px;
 }
 
 .navbar-wagon .navbar-nav > li > a:hover {
-  color: #2980B9;
+  color: #FED7C0;
   line-height: $height;
   padding-top: $vertical-padding;
   padding-bottom: $vertical-padding;
