--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer class="black-footer">
-  <div class="container text-center">
+  <div class="container text-left">
     <div class="row">
       <div class="col-xs-12 col-sm-3">
         <h4>HipCleaner</h4>
