--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,7 +1,9 @@
 <div class="col-md-12">
-  <h2>Réservez un groom</h2>
-  <p>Pour obtenir un rendez-vous dans la journée, vous devez réserver avant 16h. Votre Groom se chargera de l'inventaire de vos vêtements lors de ce rendez-vous. Pour plus d'informations, <%= link_to "cliquez ici", about_path %>.</p>
+  <h2>Réserver un groom</h2>
   <% if current_user.ready? %>
+    <div class="col-xs-12">
+      <p>Pour obtenir un rendez-vous dans la journée, vous devez réserver avant 16h. Votre Groom se chargera de l'inventaire de vos vêtements lors de ce rendez-vous. Pour plus d'informations, <%= link_to "cliquez ici", about_path %>.</p>
+    </div>
     <div class="col-md-4">
       <%= render "form" %>
     </div>
