--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -29,7 +29,7 @@
 
 .jumbotron h1 {
   font-size: 42px;
-  text-shadow: 1px 1px 3px rgba(0, 0, 0, .8);
+  // text-shadow: 1px 1px 3px rgba(0, 0, 0, .8);
 }
 
 .vertical-spacer {
