--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,7 +13,7 @@
 <div class="why-hipcleaner text-center">
   <div id="how-it-works-scroll-helper"></div>
   <div class="title">
-    <h2>As easy as one-two-three</h2>
+    <h2>Better & Cleaner en 48h</h2>
   </div>
   <div class="container text-center">
     <div class="row">
