--- a/app/views/pages/tarifs.html.erb
+++ b/app/views/pages/tarifs.html.erb
@@ -104,15 +104,15 @@
             <tbody style="border:1px solid rgba(30, 30, 30, 0.9)">
               <tr>
                 <td>Drap</td>
-                <td>16,00€</td>
+                <td>6,00€</td>
               </tr>
               <tr>
                 <td>Housse de couette</td>
-                <td>4,00€</td>
+                <td>12,00€</td>
               </tr>
               <tr>
                 <td>Taie d'oreiller</td>
-                <td>10,00€</td>
+                <td>4,00€</td>
               </tr>
               <tr>
                 <td>Couette</td>
@@ -143,10 +143,6 @@
                 <td>20,00€</td>
               </tr>
               <tr>
-                <td>Taie d'oreiller</td>
-                <td>4,00€</td>
-              </tr>
-              <tr>
                 <td>Couette plumes</td>
                 <td>27,00€</td>
               </tr>
@@ -159,8 +155,12 @@
                 <td>20,00€</td>
               </tr>
               <tr>
-                <td>Coussin</td>
+                <td>Petit coussin</td>
                 <td>8,00€</td>
+              </tr>
+              <tr>
+                <td>Grand coussin</td>
+                <td>11,00€</td>
               </tr>
               <tr>
                 <td>Housse de canapé</td>
