--- a/app/views/order_mailer/new_order.text.erb
+++ b/app/views/order_mailer/new_order.text.erb
@@ -4,10 +4,9 @@ Félicitations, ta commande est confirmée !
 
 Tu trouveras ci-dessous le récapitulatif de celle-ci :
 
-Un groom passera le  <strong><%= @order.pickup_date %></strong> entre <strong> <%= @order.pickup_time %></strong> récupérer votre linge.
-Prépare ton sac de linge sale, nous chauffons les machines !
+Un groom passera le <strong><%= @order.pickup_date.strftime('%d/%m/%Y') %></strong> entre <strong><%= @order.pickup_time.strftime('%Hh%M') %> et <%= @order.pickup_time.strftime('%Hh30') %></strong> récupérer votre linge.
 
-Retour : Le <strong><%= @order.delivery_date %></strong> entre <strong><%= @order.delivery_time %></strong>.
+Retour : Le <strong><%= @order.delivery_date.strftime('%d/%m/%Y') %></strong> entre <strong><%= @order.delivery_time.strftime('%Hh%M') %> et <%= @order.delivery_time.strftime('%Hh30') %></strong>.
 
 Ton adresse est : <strong><%= @order.user.street %>, <%= @order.user.zipcode %>, <%= @order.user.city %></strong>.
 
