GA sur la home page et title sur toutes les pages

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,3 +1,7 @@
+<%= content_for(:title) do %>
+  HipCleaner - Historique des commandes
+<% end %>
+
 <h2><%= @orders.size == 0 ? "Vous n'avez pas encore commandé sur HipCleaner" : "Historique des commandes" %></h2>
 
 
