--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,3 +1,7 @@
+<%= content_for(:title) do %>
+  HipCleaner - Commander
+<% end %>
+
 <div class="col-md-12">
   <h2>Réserver un groom</h2>
   <% if current_user.ready? %>
