--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,4 +1,8 @@
-<h2>Change your password</h2>
+<%= content_for(:title) do %>
+  HipCleaner - Votre pressing à domicile
+<% end %>
+
+<h2>Changer votre password</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
