--- a/app/views/pages/tarifs.html.erb
+++ b/app/views/pages/tarifs.html.erb
@@ -1,3 +1,7 @@
+<%= content_for(:title) do %>
+  HipCleaner - Tarifs
+<% end %>
+
 <div class="container text-center">
     <div class="row">
       <div class="col-xs-12 col-sm-4 col-md-offset-1 padding-none">
