updated workflow to prevent an order to be created before the user entered its bank info

--- a/app/views/shared/_sidenav.html.erb
+++ b/app/views/shared/_sidenav.html.erb
@@ -6,8 +6,20 @@
       <% end %>
     </li>
     <li>
-      <%= link_to new_order_path do %>
-        <i class="fa fa-check width-40"></i> Réserver un groom
+      <% if current_user.stripe_customer_token %>
+        <% if Stripe::Customer.retrieve(current_user.stripe_customer_token).default_source != "" %>
+          <%= link_to new_order_path do %>
+            <i class="fa fa-check width-40"></i> Réserver un groom
+          <% end %>
+        <% else %>
+          <%= link_to new_stripe_customer_path do %>
+            <i class="fa fa-check width-40"></i> Réserver un groom
+          <% end %>
+        <% end %>
+      <% else %>
+        <%= link_to new_stripe_customer_path do %>
+          <i class="fa fa-check width-40"></i> Réserver un groom
+        <% end %>
       <% end %>
     </li>
     <li>
