--- a/app/views/order_mailer/new_order.html.erb
+++ b/app/views/order_mailer/new_order.html.erb
@@ -14,13 +14,13 @@
 
       <p>
         Récupération :  <br>
-        Un groom passera le <strong><%= @order.pickup_date.strftime('%d/%m/%Y') %></strong> entre <strong><%= @order.pickup_time.strftime('%Hh%M') %> et <%= @order.pickup_time.strftime('%Hh30') %></strong> récupérer votre linge.
+        Un groom passera le <strong><%= @order.pickup_date.strftime('%d/%m/%Y') %></strong> entre <strong><%= @order.pickup_time.strftime('%Hh%M') %> et <%= (@order.pickup_time + 30.minutes).strftime('%HhM') %></strong> récupérer votre linge.
       </p>
 
 
       <p>
         Retour : <br>
-        Le <strong><%= @order.delivery_date.strftime('%d/%m/%Y') %></strong> entre <strong><%= @order.delivery_time.strftime('%Hh%M') %> et <%= @order.delivery_time.strftime('%Hh30') %></strong>.
+        Le <strong><%= @order.delivery_date.strftime('%d/%m/%Y') %></strong> entre <strong><%= @order.delivery_time.strftime('%Hh%M') %> et <%= (@order.delivery_time + 30.minutes).strftime('%HhM') %></strong>.
       </p>
 
       <p>
