--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -5,6 +5,6 @@
 
 <h2>Votre commande a bien été enregistrée</h2>
 <p>
-  Un de nos grooms va se présenter chez vous le <strong><%= @order.pickup_date.strftime("%d %b %Y") %></strong> à <strong><%= @order.pickup_time.strftime("%Hh%M") %></strong>.
+  Un de nos grooms va se présenter chez vous le <strong><%= @order.pickup_date.strftime("%d %b %Y") %></strong> entre <strong><%= @order.pickup_time.strftime("%Hh%M") %></strong> et <strong> <%= (@order.pickup_time + 30.minutes).strftime('%HhM') %> </strong>.
 </p>
 <p>Préparez-vous à un service de qualité.</p>
