--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,3 +1,4 @@
+
 $gray-base: #000;
 $gray: lighten($gray-base, 33.5%);
 $gray-darker: lighten($gray-base, 13.5%);
@@ -7,6 +8,7 @@ $gray-lighter: lighten($gray-base, 85%);
 $hip-color: rgba(0, 0, 0, 0.2);
 
 @import "bootstrap";
+@import 'bootstrap-datepicker3';
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700,300');
