--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -15,7 +15,9 @@
 <%= content_for :js do %>
   <% javascript_tag do %>
     $(document).ready(function() {
+      setStartDates();
       setDeliveryDate();
+      checkDeliveryDate();
     })
   <% end %>
 <% end %>
