--- a/app/views/order_mailer/new_order.html.erb
+++ b/app/views/order_mailer/new_order.html.erb
@@ -20,7 +20,7 @@
 
       <p>
         Retour : <br>
-        Le <strong><%= @order.delivery_date.strftime('%d/%m/%Y') %></strong> entre <strong><%= @order.delivery_time.strftime('%Hh%M') %> et <%= (@order.delivery_time + 30.minutes).strftime('%HhM') %></strong>.
+        Le <strong><%= @order.delivery_date.strftime('%d/%m/%Y') %></strong> entre <strong><%= @order.delivery_time.strftime('%Hh%M') %> et <%= (@order.delivery_time + 30.minutes).strftime('%Hh%M') %></strong>.
       </p>
 
       <p>
