--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -107,12 +107,13 @@
 }
 
 .comment {
-  max-width: 300px;
+  max-width: 400px;
   margin: 0 auto;
 }
 
 .comment img {
   border-radius: 50%;
   padding-bottom: 4px;
+  padding: 10px;
 }
 
