--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -155,7 +155,7 @@
       <div class="col-sm-6">
         <div class="comment">
           <%= image_tag ('fille2.png') %>
-          <p>Je travaille énormément et j’ai peu de temps à consacrer au pressing. Les prestations de HipCleaner m’ont vraiment convaincues. Mention spéciale au groom, pontuel et très aimable </p>
+          <p>Je travaille énormément et j’ai peu de temps à consacrer au pressing. Les prestations de HipCleaner m’ont vraiment convaincues. Mention spéciale au groom, pontuel et très aimable. </p>
         </div>
       </div>
     </div>
