--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -8,6 +8,7 @@
   <%= stylesheet_link_tag 'application', media: 'all' %>
   <%= yield(:stylesheets) %>
   <%= csrf_meta_tags %>
+  <%= favicon_link_tag %>
   <%= render 'layouts/ga' %>
 </head>
 <body>
