--- a/app/views/order_mailer/new_order.html.erb
+++ b/app/views/order_mailer/new_order.html.erb
@@ -5,16 +5,16 @@
       </h1>
 
       <p>
-        Félicitations, ta commande est confirmée !
+        Félicitations, votre commande est confirmée !
       </p>
 
       <p>
-        Tu trouveras ci-dessous le récapitulatif de celle-ci :
+        Vous trouverez ci-dessous le récapitulatif de celle-ci :
       </p>
 
       <p>
         Récupération :  <br>
-        Un groom passera le <strong><%= @order.pickup_date.strftime('%d/%m/%Y') %></strong> entre <strong><%= @order.pickup_time.strftime('%Hh%M') %> et <%= (@order.pickup_time + 30.minutes).strftime('%HhM') %></strong> récupérer votre linge.
+        Un groom passera le <strong><%= @order.pickup_date.strftime('%d/%m/%Y') %></strong> entre <strong><%= @order.pickup_time.strftime('%Hh%M') %> et <%= (@order.pickup_time + 30.minutes).strftime('%Hh%M') %></strong> récupérer votre linge.
       </p>
 
 
@@ -24,11 +24,11 @@
       </p>
 
       <p>
-        Ton adresse : <strong><%= @order.user.street %>, <%= @order.user.zipcode %>, <%= @order.user.city %></strong>.
+        Votre adresse : <strong><%= @order.user.street %>, <%= @order.user.zipcode %>, <%= @order.user.city %></strong>.
       </p>
 
       <p>
-        Ton téléphone est le <strong><%= @order.user.phone %></strong>.
+        Votre téléphone est le <strong><%= @order.user.phone %></strong>.
       </p>
 
      <p>Si vous avez changé d’avis, ou si vous avez un imprévu, vous  pouvez envoyer un e-mail à serviceclientparis@hipcleaner.com et nous ferons le maximum pour satisfaire votre demande. Attention, vous ne pouvez annuler votre commande que jusqu’au jour de la récupération, 17h00.
