--- a/app/views/order_mailer/new_order.text.erb
+++ b/app/views/order_mailer/new_order.text.erb
@@ -2,14 +2,14 @@ Bonjour <%= @order.user.first_name %>,
 
 Félicitations, ta commande est confirmée !
 
-Tu trouveras ci-dessous le récapitulatif de celle-ci :
+Vous trouverez ci-dessous le récapitulatif de celle-ci :
 
 Un groom passera le <strong><%= @order.pickup_date.strftime('%d/%m/%Y') %></strong> entre <strong><%= @order.pickup_time.strftime('%Hh%M') %> et <%= (@order.pickup_time + 30.minutes).strftime('%Hh%M') %></strong> récupérer votre linge.
 
 Retour : Le <strong><%= @order.delivery_date.strftime('%d/%m/%Y') %></strong> entre <strong><%= @order.delivery_time.strftime('%Hh%M') %> et <%= (@order.delivery_time + 30.minutes).strftime('%Hh%M') %></strong>.
 
-Ton adresse est : <strong><%= @order.user.street %>, <%= @order.user.zipcode %>, <%= @order.user.city %></strong>.
+Votre adresse est : <strong><%= @order.user.street %>, <%= @order.user.zipcode %>, <%= @order.user.city %></strong>.
 
-Ton téléphone est le <strong><%= @order.user.phone %></strong>.
+Votre téléphone est le <strong><%= @order.user.phone %></strong>.
 
 Si vous avez changé d’avis, ou si vous avez un imprévu, vous  pouvez envoyer un e-mail à serviceclientparis@hipcleaner.com et nous ferons le maximum pour satisfaire votre demande. Attention, vous ne pouvez annuler votre commande que jusqu’au jour de la récupération, 17h00.
