pimped stripe form

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -169,3 +169,15 @@ body {
   color: white;
   font-weight: bold;
 }
+
+.white-bg {
+  background-color: white;
+}
+
+.margin-none {
+  margin: 0;
+}
+
+.margin-btm-10 {
+  margin-bottom: 10px;
+}
