--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -4,15 +4,15 @@
     <h1>Bienvenue chez HipCleaner !</h1>
 
     <p>
-      Merci d'avoir rejoint la communauté, nous sommes heureux de te compter parmis nous.
+      Merci d'avoir rejoint la communauté, nous sommes heureux de vous compter parmi nous.
     </p>
 
     <p>
-      Pour te remercier, nous t'offrons 10 € de réduction sur ta prochaine commande que tu peux utiliser dès aujourd'hui.
+      Pour vous remercier, nous vous offrons 10 € de réduction sur votre prochaine commande que vous pouvez utiliser dès aujourd'hui.
     </p>
 
     <p>
-      Pour pouvoir récupérer ton linge sans problème, nous avons besoin de toutes les informations sur ton profil donc remplis-le bien. ;)
+      Pour pouvoir récupérer votre linge sans problème, nous avons besoin de toutes les informations sur votre profil.
     </p>
 
     <p>
