--- a/app/views/user_mailer/welcome.text.erb
+++ b/app/views/user_mailer/welcome.text.erb
@@ -1,10 +1,10 @@
 Bienvenue chez HipCleaner !
 
-Merci d'avoir rejoint la communauté, nous sommes heureux de te compter parmis nous.
+Merci d'avoir rejoint la communauté, nous sommes heureux de te compter parmi nous.
 
-Pour te remercier, nous t'offrons 10 € de réduction sur ta prochaine commande que tu peux utiliser dès aujourd'hui.
+Pour vous remercier, nous vous offrons 10 € de réduction sur votre prochaine commande que vous pouvez utiliser dès aujourd'hui.
 
-Pour pouvoir récupérer ton linge sans problème, nous avons besoin de toutes les informations sur ton profil donc remplis-le bien. ;)
+Pour pouvoir récupérer votre linge sans problème, nous avons besoin de toutes les informations sur votre profil.
 
 Dans tous les cas, c'est par ici :
 
