--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -20,7 +20,7 @@
 }
 
 .jumbotronfaq {
-  background-image: image-url("home4.jpg");
+  background-image: image-url("home8.jpg");
   background-size: cover;
   height: 200px;
   padding-top: 100px;
@@ -115,5 +115,9 @@
   border-radius: 50%;
   padding-bottom: 4px;
   padding: 10px;
+}
+
+.service {
+  padding: 100px 0;
 }
 
