--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -16,7 +16,7 @@
       <div class="col-xs-12 col-sm-3">
         <h4>Contact</h4>
         <ul class="list-unstyled">
-          <li><%= link_to 'Service Client', root_path %></li>
+          <li><%= link_to 'Service Client', service_path %></li>
           <li><%= link_to 'Mail', "mailto:contact@hipcleaner.com" %></li>
            <li><%= link_to 'Blog', root_path %></li>
         </ul>
