--- a/app/views/pages/service.html.erb
+++ b/app/views/pages/service.html.erb
@@ -10,7 +10,7 @@
 <div class="container service">
   <div class="row">
     <div class="col-xs-12 col-sm-7 col-sm-offset-2 text-justify">
-    <h5> Vous avez une question, une observation ou une suggestion ? N'hésitez pas à nous contacter !</h5>
+    <h5> Vous avez une question, une observation et/ou une suggestion ? N'hésitez pas à nous contacter !</h5>
     <br>
     <ul>
       <li><h5> Par mail à l'adresse suivante : contact@hipcleaner.com </h5></li>
