--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -50,20 +50,22 @@
     </div>
   </div>
   <div class="col-xs-12">
-    <%= f.submit "Enregistrer", class: "btn btn-primary" %>
+    <%= f.submit "Enregistrer", class: "btn btn-primary", id: "submit" %>
   </div>
 <% end %>
 
 <%= content_for :js do %>
   <% javascript_tag do %>
-    $('#user_phone').on('focusout', function() {
+    $('#user_phone').on('keyup', function() {
       var mobile = $(this).val();
       if(mobile.match(/^(0|\+33)6( ?\d{2}){4}$/) == null) {
         $(this).parent().addClass("has-error");
-        $('#invalid-phone').removeClass("hidden")
+        $('#invalid-phone').removeClass("hidden");
+        $('#submit').prop('disabled', true);
       } else {
         $(this).parent().removeClass("has-error");
-        $('#invalid-phone').addClass("hidden")
+        $('#invalid-phone').addClass("hidden");
+        $('#submit').prop('disabled', false);
       }
     })
   <% end %>
