--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,10 +19,15 @@ $hip-color: rgba(0, 0, 0, 0.2);
 body {
   font-family: 'Open Sans';
   font-weight: 300;
+  padding-top: 60px;
 }
 
 .logo {
   height: 200px;
+}
+
+.logo-icon {
+  height: 50px;
 }
 
 .btn {
@@ -31,6 +36,16 @@ body {
 
 .form-control {
   border-radius: 2px;
+}
+
+.btn-primary {
+  background-color: rgba(80, 80, 80, 0.9);
+  border: 0px;
+  transition: all 0.5s ease-in;
+}
+
+.btn-primary:hover {
+  background-color: rgb(0, 0, 0);
 }
 
 #wrapper {
@@ -71,24 +86,24 @@ body {
 }
 
 #wrapper.toggled #page-content-wrapper {
-    position: absolute;
-    margin-right: -250px;
+  position: absolute;
+  margin-right: -250px;
 }
 
 /* Sidebar Styles */
 
 .sidebar-nav {
-    position: absolute;
-    top: 0;
-    width: 250px;
-    margin: 0;
-    padding: 0;
-    list-style: none;
+  position: absolute;
+  top: 0;
+  width: 250px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 .sidebar-nav li {
-    text-indent: 20px;
-    line-height: 40px;
+  text-indent: 20px;
+  line-height: 40px;
 }
 
 .sidebar-nav li a {
@@ -128,31 +143,43 @@ body {
 }
 
 @media(min-width:768px) {
-    #wrapper {
-        padding-left: 250px;
-    }
+  #wrapper {
+    padding-left: 250px;
+  }
 
-    #wrapper.toggled {
-        padding-left: 0;
-    }
+  #wrapper.toggled {
+    padding-left: 0;
+  }
 
-    #sidebar-wrapper {
-        width: 250px;
-    }
+  #sidebar-wrapper {
+    width: 250px;
+  }
 
-    #wrapper.toggled #sidebar-wrapper {
-        width: 0;
-    }
+  #wrapper.toggled #sidebar-wrapper {
+    width: 0;
+  }
 
-    #page-content-wrapper {
-        padding: 20px;
-        position: relative;
-    }
+  #page-content-wrapper {
+    padding: 20px;
+    position: relative;
+  }
 
-    #wrapper.toggled #page-content-wrapper {
-        position: relative;
-        margin-right: 0;
-    }
+  #wrapper.toggled #page-content-wrapper {
+    position: relative;
+    margin-right: 0;
+  }
+
+  #mobile-navbar {
+    display: none;
+  }
+
+  body {
+    padding-top: 0;
+  }
+}
+
+#mobile-navbar {
+  display: visible;
 }
 
 .padding-none {
@@ -181,3 +208,46 @@ body {
 .margin-btm-10 {
   margin-bottom: 10px;
 }
+
+#mobile-navbar ul {
+  display: inline;
+}
+
+#mobile-navbar {
+  position: absolute;
+  top: 0;
+}
+
+#mobile-navbar .list-inline > li > a {
+  color: $color;
+  height: 60px;
+  padding-top: 23px;
+  padding-bottom: 23px;
+  padding-left: 40%;
+  padding-right: 40%;
+}
+
+#mobile-navbar .list-inline > li > a:hover {
+  color: #FED7C0;
+}
+
+#mobile-navbar .list-inline > li {
+  line-height: 60px;
+  width: 19%;
+  border-left: 1px solid white;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+#mobile-navbar .list-inline > li:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+.border-right {
+  border-right: 1px solid white;
+}
+
+.margin-left-neg-5 {
+  margin-left: -5px;
+}
+
