--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,13 +12,14 @@
   <%= render 'layouts/ga' %>
 
 </head>
-<body>
+<body id="body">
   <div id="wrapper">
     <% if user_signed_in? %>
       <%= render "shared/sidenav" %>
       <%= render "shared/mobile_navbar" %>
     <% else %>
       <%= render "shared/welcome_sidenav" %>
+      <%= render "shared/welcome_mobile_navbar" %>
     <% end %>
     <!-- /#sidebar-wrapper -->
 
