--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -168,7 +168,7 @@
       <div class="col-xs-12 title">
         <h1>HipCleaner est disponible à Paris</h1>
       </div>
-      <div class="col-xs-12">
+      <div class="col-xs-12 hidden-xs">
       <%= image_tag ('map.png') %>
       </div>
     </div>
