margin negative sur price et comment

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -147,6 +147,11 @@ body {
 
 @media(min-width:768px) {
 
+  #pricing {
+  padding: 80px;
+  background-color: #F4F4F4;
+  }
+
   .comment {
   max-width: 400px;
   margin: 0 auto;
