--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -39,9 +39,9 @@
   </div>
 </div>
 
-<div class="pricing text-center">
+<div id="pricing">
   <div id="pricing-scroll-helper"></div>
-  <div class="title">
+  <div class="title text-center">
     <h2>Au même prix que votre pressing</h2>
   </div>
   <div class="container text-center">
