--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -55,9 +55,10 @@
   font-weight: 300;
 }
 
-.pricing {
+#pricing {
   padding: 80px;
   background-color: #F4F4F4;
+  margin: 0 -20px;
 }
 
 .minimum-order {
