--- a/app/views/pages/tarifs.html.erb
+++ b/app/views/pages/tarifs.html.erb
@@ -167,8 +167,8 @@
                 <td>11,00€</td>
               </tr>
               <tr>
-                <td>Housse de canapé</td>
-                <td>32,00€</td>
+                <td>Plaid</td>
+                <td>15,00€</td>
               </tr>
               <tr>
                 <td>Oreiller synthétique</td>
