--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -9,14 +9,14 @@
   <div class="container text-left faq">
     <div class="row">
       <div class="col-xs-12 col-sm-6 text-justify">
-        <h5> Comment je passe ma commande ?</h5>
-        <p>Vous passez commande directement depuis notre site internet (www.hipcleaner.com). En cas de difficultés, n’hésitez pas à nous contacter contact@hipcleaner.com – notre équipe sera ravie de vous aider !</p>
+        <h5> Comment passer une commande ?</h5>
+        <p>Vous passez commande directement depuis notre site internet. En cas de difficultés, n’hésitez pas à nous contacter à l'adresse <%= link_to 'contact@hipcleaner.com', "mailto:contact@hipcleaner.com" %> – notre équipe sera ravie de vous aider !</p>
 
         <h5> Est-ce que vous m’envoyez un rappel pour me dire que vous venez récupérer mes vêtements ?</h5>
-        <p>Oui ! Nous vous envoyons un message de rappel sur votre portable 45 min avant l’heure de passage de votre groom HipCleaner.</p>
+        <p>Oui ! Nous vous envoyons un message de rappel sur votre portable 1 heure avant le passage de votre groom HipCleaner.</p>
 
         <h5>Qui se charge de récupérer mes vêtements ?</h5>
-        <p>Une fois votre commande validée, un de nos grooms HipCleaner se déplacera jusqu’à votre domicile pour récupérer vos précieux vêtements.</p>
+        <p>Une fois votre commande validée, un de nos grooms HipCleaner se déplace jusqu’à votre domicile pour récupérer vos précieux vêtements. Nous comptabilisons ensemble les articles que vous nous confiez et nous vous laissons un reçu.</p>
 
         <h5>Est-ce que je dois prévoir un sac dans lequel mettre les vêtements que vous venez récupérer ?</h5>
         <p>Non ! Nous nous occupons de tout. Vous n’avez qu’à mettre vos vêtements de côté. Nous avons à notre disposition des sacs de récupération de linge. Nous utilisons un sac par client.</p>
@@ -26,7 +26,10 @@
       </div>
       <div class="col-xs-12 col-sm-6 text-justify">
         <h5>Que se passe-t-il une fois que vous avez récupéré mes vêtements ?</h5>
-        <p>Une fois que votre groom HipCleaner a récupéré vos vêtements, il les dépose au sein de notre pressing. Nous faisons ensuite un inventaire des vêtements collectés puis nous vous envoyons une confirmation par email. Vos vêtements sont ensuite nettoyés dans les 24 heures.</p>
+        <p>Une fois que votre groom HipCleaner a récupéré vos vêtements, nous nous chargeons de les nettoyer dans les 48 heures.</p>
+
+        <h5>Qui s'occupe de nettoyer mes vêtements ?</h5>
+        <p>Nous avons sélectionné pour vous le meilleur du pressing parisien. Préparez-vous à un service de qualité. </p>
 
         <h5>Quand est-ce que je récupère mes vêtements ?</h5>
         <p>Un groom HipCleaner prendra le soin de vous rapporter vos vêtements à la date et au lieu que vous aurez indiqués lors de votre commande.</p>
@@ -35,12 +38,14 @@
         <p>Oui ! Si vous souhaitez modifier l’heure et/ou le lieu de retour des vêtements faites-le nous savoir par email à contact@hipcleaner.com
         Nous mettrons tout en œuvre pour vous proposer le rendez-vous qui vous convient le mieux.</p>
 
+        <h5>Que se passe-t-il en cas de dégradation ou de perte d'un des mes vêtements ?</h5>
+        <p>Nous vous dédommageons en appliquant le barême d'indemnisation établi par la Fédération Française des Pressings et Blanchisseries.</p>
 
         <h5>Quand est-ce que je paye ?</h5>
         <p>Vous payez lorsque votre groom HipCleaner vous rapporte vos vêtements.</p>
 
         <h5>Comment est-ce que je paye ?</h5>
-        <p>Nous débitons directement le compte de la carte bancaire que vous avez renseignée dans votre profil lors de votre inscription sur notre site www.hipcleaner.com</p>
+        <p>Nous débitons directement le compte de la carte bancaire que vous avez renseignée lors de votre première commande sur notre site www.hipcleaner.com</p>
 
       </div>
     </div>
