--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -10,7 +10,7 @@
             <li><%= link_to 'Inscription', new_user_registration_path %></li>
             <li><%= link_to 'Connexion', new_user_session_path %></li
             <% end %>
-          <li><%= link_to 'Faq', faq_path, target: "_blank" %></li>
+          <li><%= link_to 'Faq', faq_path %></li>
         </ul>
       </div>
       <div class="col-xs-12 col-sm-3">
