link fb et twitter

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -30,10 +30,10 @@
       </div>
       <div class="col-xs-12 col-sm-3">
         <h4>Réseaux sociaux</h4>
-          <%= link_to "https://www.facebook.com", target: "_blank" do %>
+          <%= link_to "https://www.facebook.com/hipcleaner", target: "_blank" do %>
             <i class="fa fa-facebook-square fa-3x"></i>
           <% end %>
-          <%= link_to "https://www.twitter.com", target: "_blank" do %>
+          <%= link_to "https://www.twitter.com/hipcleaner", target: "_blank" do %>
             <i class="fa fa-twitter-square fa-3x"></i>
           <% end %>
       </div>
