--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,11 +4,12 @@
   <title><%= yield(:title) || "HipCleaner" %></title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="description" content="<%= (yield(:description) || "").squish %>">
+  <meta name="description" content="<%= (yield(:description) || "Votre service de pressing à domicile sans dépenser plus").squish %>">
   <%= stylesheet_link_tag 'application', media: 'all' %>
   <%= yield(:stylesheets) %>
   <%= favicon_link_tag %>
   <%= csrf_meta_tags %>
+  <%= render 'layouts/facebook' %>
   <%= render 'layouts/ga' %>
 
 </head>
