render dans home

--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -9,6 +9,7 @@
   <%= yield(:stylesheets) %>
   <%= csrf_meta_tags %>
   <%= favicon_link_tag %>
+  <%= render 'layouts/facebook' %>
   <%= render 'layouts/ga' %>
 </head>
 <body>
