--- a/app/views/layouts/_facebook.html.erb
+++ b/app/views/layouts/_facebook.html.erb
@@ -1,6 +1,6 @@
 <meta property="og:title" content="HipCleaner - Nous allons vous faire aimer le pressing" />
 <meta property="og:url" content="https://www.hipcleaner.com" />
 <meta property="og:image" content="https://github.com/Eschults/sushi/blob/master/app/assets/images/thumbnail-fb.png" />
-<meta property="og:description" content="Votre service de pressing à domicile sans dépenser plus !" />
+<meta property="og:description" content="HipCleaner c'est votre service de pressing à domicile sans dépenser plus. Vous commandez en deux clics sur notre site internet et vous pouvez récupérer votre linge en 48h ! " />
 <meta property="og:site_name" content="HipCleaner" />
 <!-- <meta property="fb:admins" content="655189227923426" /> -->
