--- a/app/views/shared/_welcome_mobile_navbar.html.erb
+++ b/app/views/shared/_welcome_mobile_navbar.html.erb
@@ -9,12 +9,12 @@
         </li>
         <li class="text-center margin-left-neg-5">
           <%= link_to new_user_registration_path do %>
-            INSCRIPTION
+            Inscription
           <% end %>
         </li>
         <li class="text-center margin-left-neg-5">
           <%= link_to new_user_session_path do %>
-            CONNEXION
+            Connexion
           <% end %>
         </li>
       </ul>
