--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,7 +9,8 @@
         <span class="icon-bar"></span>
       </button>
         <%= link_to root_path do %>
-        <%= image_tag "Logo-horizontal-test-gris-rose.png", class: "navbar-brand", id: "logo" %>
+          <%= image_tag "logo-naked.png", class: "navbar-brand visible-xs", id: "logo" %>
+          <%= image_tag "Logo-horizontal-test-gris-rose.png", class: "navbar-brand hidden-xs", id: "logo" %>
         <% end %>
     </div>
 
