--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -58,7 +58,7 @@
   <% javascript_tag do %>
     $('#user_phone').on('keyup', function() {
       var mobile = $(this).val();
-      if(mobile.match(/^(0|\+33)6( ?\d{2}){4}$/) == null) {
+      if(mobile.match(/^(0|\+33)[67]( ?\d{2}){4}$/) == null) {
         $(this).parent().addClass("has-error");
         $('#invalid-phone').removeClass("hidden");
         $('#submit').prop('disabled', true);
