password reset fixed

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -2,7 +2,7 @@
 
 <p>Vous avez demandé à changer votre mot de passe, vous pouvez maintenant le modifier en cliquant sur le lien suivant :</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p><%= link_to 'Réinitialiser mon mot de passe', edit_password_url(@resource, reset_password_token: @token) %></p>
 
 <p>Si vous n'êtes pas à l'origine de cette demande, ignorez ce mail</p>
 
