--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -4,7 +4,7 @@
   <title><%= yield(:title) || "HipCleaner" %></title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="description" content="<%= (yield(:description) || "").squish %>">
+  <meta name="description" content="HipCleaner c'est votre service de pressing parisien à domicile sans dépenser plus. Bye bye la corvée, vous commandez un groom qui vient chez vous sur un créneau de 30 minutes entre 19h et 23h et il vous livre vos vêtements en 48h.">
   <%= stylesheet_link_tag 'application', media: 'all' %>
   <%= yield(:stylesheets) %>
   <%= csrf_meta_tags %>
