--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -2,25 +2,27 @@
   HipCleaner - Votre pressing à domicile
 <% end %>
 
-<h2>Changer votre password</h2>
+<div class="col-md-4 col-md-offset-4">
+  <h2>Réinitialisez votre mot de passe</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
+  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+    <%= devise_error_messages! %>
+    <%= f.hidden_field :reset_password_token %>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
-  </div>
+    <div class="field">
+      <%= f.label :password, "Nouveau mot de passe" %><br />
+      <%= f.password_field :password, autofocus: true, autocomplete: "off", class: "form-control" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+    <div class="field">
+      <%= f.label :password_confirmation, "Confirmer le mot de passe" %><br />
+      <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
+    <br>
+    <div class="actions">
+      <%= f.submit "Enregistrer et continuer", class: "form-control btn btn-primary" %>
+    </div>
+  <% end %>
 
-<%= render "devise/shared/links" %>
+</div>
