--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -15,7 +15,7 @@
                         <tbody>
                           <tr style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif">
                             <td style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif;text-align:center">
-                              <a href="https://www.airbnb.fr?euid=16e59f4e-e1c4-1995-1777-d92030cb0125" title="Airbnb" style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif;color:#ff5a5f;text-decoration:none" target="_blank">
+                              <a href="https://www.hipcleaner.com" title="HipCleaner" style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif;color:#ff5a5f;text-decoration:none" target="_blank">
                                 <img src="http://www.allo-image.net/stockimg/vignette/1742/17789477395506b26b11642logo_signature_email.png" border="0" alt="HipCleaner" width="120" height="112" style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif;max-width:100%;border:0" class="CToWUd">
                               </a>
                             </td>
