--- a/app/views/order_mailer/new_order.html.erb
+++ b/app/views/order_mailer/new_order.html.erb
@@ -1,39 +1,122 @@
-<html>
-  <body>
-      <h1>
-        Bonjour <%= @order.user.first_name %>,
-      </h1>
+<div bgcolor="#EEEEEE" style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif;color:#565a5c;min-height:100%;background-color:#f7f7f7;font-size:16px;line-height:150%;width:100%">
+  <table style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif;line-height:150%;border-spacing:0;background-color:#f7f7f7;width:100%">
+    <tbody>
+      <tr style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif">
+        <td style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif"></td>
+        <td style="padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif;display:block;margin:0 auto;clear:both;max-width:610px">
+          <div style="font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif;padding:15px;max-width:600px;display:block;margin:0 auto;padding-left:5px;padding-right:5px;padding-bottom:5px;padding-top:0px">
+            <table style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif;line-height:150%;border-spacing:0;margin-bottom:10px;margin-top:10px;width:100%">
+              <tbody>
+                <tr style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif">
+                  <td style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif"></td>
+                  <td style="padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif;display:block;margin:0 auto;clear:both;max-width:610px">
+                    <div style="font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif;padding:15px;max-width:600px;display:block;margin:0 auto;padding-left:5px;padding-right:5px;padding-bottom:5px;padding-top:0px">
+                      <table style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif;border-spacing:0;line-height:150%;width:100%">
+                        <tbody>
+                          <tr style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif">
+                            <td style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif;text-align:center">
+                              <a href="https://www.hipcleaner.com" title="HipCleaner" style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif;color:#ff5a5f;text-decoration:none" target="_blank">
+                                <img src="http://www.allo-image.net/stockimg/vignette/1742/17789477395506b26b11642logo_signature_email.png" border="0" alt="HipCleaner" width="120" height="112" style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif;max-width:100%;border:0" class="CToWUd">
+                              </a>
+                            </td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                  </td>
+                  <td style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif">
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            <div style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif">
+              <div style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif">
+                Bonjour <%= @order.user.first_name %>,
+              </div>
+              <div style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif;margin-top:1em">
+                Félicitations, votre commande est confirmée !
+              </div>
+              <div style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif;margin-top:1em">
+                Vous trouverez ci-dessous le récapitulatif de celle-ci :
+              </div>
+              <div style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif;margin-top:1em">
+                Récupération :  <br>
+                Un groom passera le <strong><%= @order.pickup_date.strftime('%d/%m/%Y') %></strong> entre <strong><%= @order.pickup_time.strftime('%Hh%M') %> et <%= (@order.pickup_time + 30.minutes).strftime('%Hh%M') %></strong> récupérer votre linge.
+              </div>
+              <div style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif;margin-top:1em">
+                Retour : <br>
+                Le <strong><%= @order.delivery_date.strftime('%d/%m/%Y') %></strong> entre <strong><%= @order.delivery_time.strftime('%Hh%M') %> et <%= (@order.delivery_time + 30.minutes).strftime('%Hh%M') %></strong>.
+              </div>
+              <div style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif;margin-top:1em">
+                Votre adresse : <strong><%= @order.user.street %>, <%= @order.user.zipcode %>, <%= @order.user.city %></strong>.
+              </div>
+              <div style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif;margin-top:1em">
+                Votre téléphone est le <strong><%= @order.user.phone %></strong>.
+              </div>
+              <div style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif;margin-top:1em">
+                Si vous avez changé d’avis, ou si vous avez un imprévu, vous  pouvez envoyer un e-mail à serviceclientparis@hipcleaner.com et nous ferons le maximum pour satisfaire votre demande. Attention, vous ne pouvez annuler votre commande que jusqu’au jour de la récupération, 17h00.
+              </div>
+              <div style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif;margin-top:1em">
+                Merci,<br style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif">L'équipe HipCleaner
+              </div>
+            </div>
+            <br style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif"><br style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif">
+          </div>
+        </td>
+        <td style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif"></td>
+      </tr>
 
-      <p>
-        Félicitations, votre commande est confirmée !
-      </p>
-
-      <p>
-        Vous trouverez ci-dessous le récapitulatif de celle-ci :
-      </p>
-
-      <p>
-        Récupération :  <br>
-        Un groom passera le <strong><%= @order.pickup_date.strftime('%d/%m/%Y') %></strong> entre <strong><%= @order.pickup_time.strftime('%Hh%M') %> et <%= (@order.pickup_time + 30.minutes).strftime('%Hh%M') %></strong> récupérer votre linge.
-      </p>
-
-
-      <p>
-        Retour : <br>
-        Le <strong><%= @order.delivery_date.strftime('%d/%m/%Y') %></strong> entre <strong><%= @order.delivery_time.strftime('%Hh%M') %> et <%= (@order.delivery_time + 30.minutes).strftime('%Hh%M') %></strong>.
-      </p>
-
-      <p>
-        Votre adresse : <strong><%= @order.user.street %>, <%= @order.user.zipcode %>, <%= @order.user.city %></strong>.
-      </p>
-
-      <p>
-        Votre téléphone est le <strong><%= @order.user.phone %></strong>.
-      </p>
-
-     <p>Si vous avez changé d’avis, ou si vous avez un imprévu, vous  pouvez envoyer un e-mail à serviceclientparis@hipcleaner.com et nous ferons le maximum pour satisfaire votre demande. Attention, vous ne pouvez annuler votre commande que jusqu’au jour de la récupération, 17h00.
-     </p>
-
-    </div>
-  </body>
-</html>
+      <tr style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif">
+        <td style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif"></td>
+        <td style="padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif;display:block;margin:0 auto;clear:both;max-width:610px">
+          <div style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif">
+            <div style="font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif;max-width:600px;padding:15px;margin:0 auto;display:block;padding-bottom:5px;padding-top:0px;color:#9ca299;font-size:14px;text-align:center;padding-left:5px;padding-right:5px">
+              <table cellpadding="10" style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif;border-spacing:0;line-height:150%;width:100%;padding:10px">
+                <tbody>
+                  <tr style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif">
+                    <td align="center" style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif">
+                      <table cellpadding="5" style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif;border-spacing:0;line-height:150%;width:100%;width:auto">
+                        <tbody>
+                          <tr style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif">
+                            <td style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif;padding:5px">
+                              <a href="https://www.facebook.com/hipcleaner" title="Facebook" style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif;color:#ff5a5f;text-decoration:none" target="_blank">
+                                <img alt="Facebook" height="42" src="https://ci4.googleusercontent.com/proxy/sDMYDPzBfqtgHoO3sXXhp-_CacPVGdz6HBRtYzIpaLNHuHUqNuvz4vGQCSmYcOHkExGPjFWTTLO_UruodubCpvwPgdZ8kbzD4xa1XBOcNQ-WPv8kH2funAlb-Omvy0Wlgd38jmUu8TOyq99K3IVP4fhYVxueiw=s0-d-e1-ft#http://a0.muscache.com/airbnb/rookery/email/footer/facebook-3c1b46bf609e7b12c2b8b9576911e11a.png" width="42" style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif;max-width:100%;border:0" class="CToWUd">
+                              </a>
+                            </td>
+                            <td style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif;padding:5px">
+                              <a href="https://twitter.com/hipcleaner" title="Twitter" style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif;color:#ff5a5f;text-decoration:none" target="_blank">
+                                <img alt="Twitter" height="42" src="https://ci3.googleusercontent.com/proxy/ZVeNUdDWMyk2wH0L-I8ns9mtbfG1596_3kgJINLJUXeD6o72_omNx7lBi0M0aO8GjoE-K9bgaD4pdkEUsHbX07qJHLRtyv6RKMnK7BFXxnJKrTgLAPZq0XePges_JL8NgJPldOZhF9hMsc3Z2V2BP7-9p4o6=s0-d-e1-ft#http://a0.muscache.com/airbnb/rookery/email/footer/twitter-380e6f33075cc0e9c18231507ae93684.png" width="42" style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif;max-width:100%;border:0" class="CToWUd">
+                              </a>
+                            </td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+              <table style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif;border-spacing:0;line-height:150%;width:100%">
+                <tbody>
+                  <tr style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif">
+                    <td style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif"></td>
+                    <td style="padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif;display:block;margin:0 auto;clear:both;max-width:610px">
+                      <div style="font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif;padding:15px;max-width:600px;margin:0 auto;display:block;padding-left:5px;padding-right:5px;padding-bottom:5px;padding-top:0px;color:#9ca299;font-size:14px;text-align:center">
+                        Envoyé avec <img alt="&amp;#9829;" height="10" src="https://ci6.googleusercontent.com/proxy/rU4UoU_vqkBhbK2IMvTnXyDDVUMWfLUHM9VjqTkWnNJ9tXhlBI81LeYdHR0qtRXSZzh3xOO1-N-3JopJWF6YXn9I7qk_ZNPfDKmueqVgbFD-pDon0f8IgOfnAky4DEHteSMtXtr_rNxcgyQj_lG6q12P_A=s0-d-e1-ft#http://a1.muscache.com/airbnb/rookery/email/footer/heart-eeaa9b6467981f6b84031fc9570ed630.png" width="12" style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif;max-width:100%" class="CToWUd"> depuis le siège de HipCleaner<br style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif">
+                      </div>
+                    </td>
+                    <td style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif"></td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <div style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif;color:#eeeeee;font-size:1px;min-height:1px;line-height:1px">
+              <%= Time.now %>
+            </div>
+          </div>
+          <br style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif"><br style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif">
+        </td>
+        <td style="margin:0;padding:0;font-family:&quot;Helvetica Neue&quot;,&quot;Helvetica&quot;,Helvetica,Arial,sans-serif"></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
